@@ -1,12 +1,7 @@
 #!/bin/sh
 
-identifyname="cn.ivanzk.BootApplication"
+identifyname="cloud-serverless-1.0.jar"
 basePath=$(cd $(dirname $0); pwd);
-javaOpts="-Xms256m -Xmx256m -Xmn128m -Xss256k -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=128m"
-javaOpts="${javaOpts} -Djava.rmi.server.hostname=127.0.0.1"
-javaOpts="${javaOpts} -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=${basePath}/oom.hprof"
-javaOpts="${javaOpts} -XX:SurvivorRatio=6 -XX:MaxTenuringThreshold=5 -XX:PretenureSizeThreshold=0 -XX:LargePageSizeInBytes=128m -XX:CMSInitiatingOccupancyFraction=92"
-javaOpts="${javaOpts} -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:+UseFastAccessorMethods -XX:+UseCMSInitiatingOccupancyOnly"
 
 #检查并停止已经启动的服务
 pid=`ps aux | grep $identifyname | grep -v grep | awk '{print $2}'`
@@ -18,9 +13,8 @@ fi
 
 #删除日志目录
 rm -rf ${basePath}/logs
-rm -rf ${basePath}/tmp
 
 #新启动服务
-nohup java -server ${javaOpts} -classpath ${basePath}/.:${basePath}/lib/* ${identifyname} 推送 >/dev/null 2>&1 &
+nohup java -jar ${identifyname} &
 echo "service ["$identifyname"] started."
 ps -ef|grep ${identifyname}
